kong-ingress-controller-handson/manifests/echo-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
  namespace: kic-dev
spec:
  ports:
    - port: 1025
      name: tcp
      protocol: TCP
      targetPort: 1025
    - port: 1026
      name: udp
      protocol: TCP
      targetPort: 1026
    - port: 1027
      name: http
      protocol: TCP
      targetPort: 1027
    - port: 1030
      name: tls
      protocol: TCP
      targetPort: 1030
  selector:
    app: echo
